--- a/ty-kde-utilities-meta/PKGBUILD
+++ b/ty-kde-utilities-meta/PKGBUILD
@@ -2,13 +2,13 @@
 # Maintainer tyguius <ta.tgyns13[at]gmail.com>
 pkgname="ty-kde-utilities-meta"
 pkgdesc="Meta package with Core utilitites for KDE Desktop Environment"
-pkgver=0.1.0.3
+pkgver=0.1.0.4
 pkgrel=0
 url="https://github.com/tyguius/tyrepo"
 arch=('x86_64')
 license=('custom')
 
-package_depends=($(grep -v "^#" "$pkgname.depends"))
+
 package() {
-    depends=("${package_depends[@]}")
+    depends_from_file $pkgname
 }
