--- a/ty-kde-utilities-meta/PKGBUILD
+++ b/ty-kde-utilities-meta/PKGBUILD
@@ -1,7 +1,7 @@
 # Template for tydomain
 # Maintainer tyguius <ta.tgyns13[at]gmail.com>
 pkgname="ty-kde-utilities-meta"
-pkgdesc="Meta package with Core utilitites for KDE Desktop Environment"
+pkgdesc="Meta package with Core utilitites for KDE Plasma Desktop Environment"
 pkgver=0.1.1.0
 pkgrel=2
 url="https://github.com/tyguius/tyrepo"
