--- a/ty-plasma-desktop/PKGBUILD
+++ b/ty-plasma-desktop/PKGBUILD
@@ -2,13 +2,23 @@
 # Maintainer tyguius <ta.tgyns13[at]gmail.com>
 pkgname="ty-plasma-desktop"
 pkgdesc="custom configuration of plasma desktop and some applications"
-pkgver=0.0.0.1
+pkgver=0.0.0.3
 pkgrel=1
 url="https://github.com/tyguius/tyrepo"
 arch=('x86_64')
 license=('custom')
+skel_config=/etc/skel/.config
+
+source ../ty-frame.sh
+
+install_hooks_from_file
+sources_from_file
 
 package_depends=($(grep -v "^#" "$pkgname.depends"))
 package() {
+    mkdir ${pkgdir}$skel_config
     depends=("${package_depends[@]}")
+    for source in "${source[@]}"; do
+        install -D --verbose --compare -m644 "${srcdir}/$source" "${pkgdir}$skel_config"
+    done
 }
