--- a/ty-syncthing-desktop/PKGBUILD
+++ b/ty-syncthing-desktop/PKGBUILD
@@ -1,22 +1,19 @@
 # Template for tydomain
 # Maintainer tyguius <ta.tgyns13[at]gmail.com>
-pkgname=
-pkgdesc=
-pkgver=0.0.0.0
-pkgrel=0
+pkgname="ty-syncthing-desktop"
+pkgdesc="plasma esktop syncthing"
+pkgver=0.0.1.0
+pkgrel=1
 url="https://github.com/tyguius/tyrepo"
 arch=('x86_64')
 license=('custom')
 
-# integrate helper functions for automatic setting of variables
-source ../frame_tyrepo.sh
+source ../ty-frame.sh
 
-# get $depends from file ()
-depends_from_file $pkgname
+# TODO: add install hooks
 
-# get $source files from file
-sources_from_file $pkgname
 
 package() {
-
+    depends_from_file $pkgname
 }
+
